# laser_mt_warehouse

./: Anotações  Controle.py  Endereços bluetooth.txt  L1LMR-1.py  L1LMR-2.py  MamboFly.py  README.md  Turtle.py  comunicacion.py  requirements.txt  token.pickle
Camera_drone/camera_esp_embarcada/: camera_esp_embarcada.ino
Camera_drone/img_processing/: Api_drive_consume.py  app.py  camera_processing.py  credentials.json  token.pickle
Drone_camera/Embedded_esp_cam/: Embedded_esp_cam.ino
Drone_camera/Embedded_esp_cam/src/: Embedded_esp_cam.ino
Drone_camera/Image_processing/: API_image_processing.py
Mambo/: Packages python list.txt  fly_test.py  teste.py
Mambo/src/: Drone.py  comunicacion.py  flight_plan.py
Mambo/src/Drone/: __init__.py
Python-env/: pyvenv.cfg
SimulationTurtleBot/devel/: .catkin  _setup_util.py  local_setup.sh
SimulationTurtleBot/maps/: map.pgm  mapping.py
Turtlebot2/astar/: astar.hpp
Turtlebot2/maps/: arena.yaml  arena3.pgm  arena3.yaml
Turtlebot2/src/: astar  astar.cpp  route.yaml  route1.yaml  route2.yaml
sketch_oct04b/: sketch_oct04b.ino
src/: MamboFly.py  camera_drone.ino
workspace/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
workspace/src/laser_turtlebot/: CMakeLists.txt  plugins.xml
workspace/src/laser_turtlebot/config/: default.yaml
workspace/src/laser_turtlebot/include/: move_turtlebot.h
workspace/src/laser_turtlebot/launch/: move_turtlebot.launch
workspace/src/laser_turtlebot/src/: move_turtlebot.cpp
(+140 files in other folders)
